--- a/index.html
+++ b/index.html
@@ -6,13 +6,20 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 	</head>
+
 	<body class="is-preload">
 
 		<!-- Header -->
 			<header id="header">
+				<ul height="42px" text-align="center">
+					<li style="padding-left: 30px"><a href="#one">About Me</a></li>
+					<li style="padding-left: 30px"><a href="#">Resume</a></li>
+					<li style="padding-left: 30px"><a href="#two">Recent Work</a></li>
+					<li style="padding-left: 30px"><a href="#three">Contact</a></li>
+				</ul>
 				<div class="inner">
 					<a href="#" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
-					<h1>My name is<strong> John Eric</strong> and I'm a
+					<h1>My name is<strong> John Eric</strong> and I'm a<br />
 						<strong> Petroleum Engineer, </strong><br />
 						<strong>Software Developer, </strong><br /> and 
 						<strong>Problem Solver.</strong></h1><br />
@@ -23,7 +30,7 @@
 			<div id="main">
 
 				<!-- One -->
-					<section id="one">
+					<section id="one" href="#section1">
 						<header class="major">
 							<h2>About Me<br />
 						</header>
@@ -100,7 +107,7 @@
 									</li>
 									<li>
 										<h3 class="icon solid fa-mobile-alt"><span class="label">Phone</span></h3>
-										(713) 492 - 3196
+										(713) 492 - 3196<br />
 									</li>
 									<li>
 										<h3 class="icon solid fa-envelope"><span class="label">Email</span></h3>
