fix header alignment and add placeholder resume

--- a/index.html
+++ b/index.html
@@ -12,10 +12,9 @@
 		<!-- Header -->
 			<header id="header">
 				<ul height="42px" text-align="center">
-					<li style="padding-left: 30px"><a href="#one">About Me</a></li>
-					<li style="padding-left: 30px"><a href="#">Resume</a></li>
-					<li style="padding-left: 30px"><a href="#two">Recent Work</a></li>
-					<li style="padding-left: 30px"><a href="#three">Contact</a></li>
+					<li style="padding-right: 30px"><a href="#one">About Me</a></li>
+					<li style="padding-right: 30px"><a href="#two">Recent Work</a></li>
+					<li><a href="#three">Contact</a></li>
 				</ul>
 				<div class="inner">
 					<a href="#" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
@@ -38,7 +37,7 @@
 
 							As an undergraduate studying petroleum engineering at The University of Texas at Austin I fell in love with the energy industry and I often wondered how it could be improved. How can I take the existing science and math and create a unique solution to the world's energy needs? I found the answer to this question through programming. In college, I explored the world of coding while learning about various disciplines in the oil industry. Combining my two passions allowed me to exhibit the sheer joy of making things, breaking them, and coming up with innovative solutions to improve them. For me, the learning never stops. I'm looking forward to the future and I welcome you to join me on my journey as a highly motivated and detail-oriented engineer.</p>
 						<ul class="actions">
-							<li><a href="#" class="button">Learn More</a></li>
+							<li><a href="resume/file.pdf" download="John Eric McCarthy Resume" class="button">Download My Resume!</a></li>
 						</ul>
 					</section>
 
