--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 							</article>
 						</div>
 						<ul class="actions">
-							<li><a href="https://github.com/JohnEricMcCarthy2?tab=repositories" class="button">Full Portfolio</a></li>
+							<li><a href="https://github.com/JohnEricMcCarthy2?tab=repositories" target="_blank" class="button">Full Portfolio</a></li>
 						</ul>
 					</section>
 
