--- a/index.html
+++ b/index.html
@@ -70,9 +70,9 @@
 							<div class="col-8 col-12-small">
 								<form action="https://formsubmit.co/ffa58f32161debe8f97be2911d9f7acb" method="POST" target="_blank" onsubmit="this.submit(); this.reset(); return false">
 									<div class="row gtr-uniform gtr-50">
-										<div class="col-6 col-12-xsmall"><input type="text" name="name" id="name" placeholder="Name" /></div>
-										<div class="col-6 col-12-xsmall"><input type="email" name="email" id="email" placeholder="Email" /></div>
-										<div class="col-12"><textarea name="message" id="message" placeholder="Message" rows="4"></textarea></div>
+										<div class="col-6 col-12-xsmall"><input type="text" name="name" id="name" placeholder="Name" required/></div>
+										<div class="col-6 col-12-xsmall"><input type="email" name="email" id="email" placeholder="Email" required/></div>
+										<div class="col-12"><textarea name="message" id="message" placeholder="Message" rows="4" required></textarea></div>
 										<li><input type="submit" value="Send Message"></input></li>
 									</div>
 								</form>
