descriptions + nav arrow color

--- a/index.html
+++ b/index.html
@@ -49,13 +49,13 @@
 								<a href="images/fulls/01.jpg" class="image fit thumb"><img src="images/thumbs/01.jpg" alt=""/></a>
 								<h3><a href="https://github.com/JohnEricMcCarthy2/Machine-Learning/blob/main/Interactive_NeuralNetwork_SingleLayer.ipynb" target="_blank">
 								Interactive Single Layer Artificial Neural Network</h3></a>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+								<p>Simple workflow, demonstration of artificial neural networks for subsurface modeling workflows. This should help you get started with building subsurface models that use data analytics and machine learning.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/02.jpg" class="image fit thumb"><img src="images/thumbs/02.jpg" alt=""/></a>
 								<h3><a href="https://github.com/JohnEricMcCarthy2/Machine-Learning/blob/main/SubsurfaceDataAnalytics_ConvolutionalNeuralNetworks_Percolation_Threshold.ipynb" target="_blank">
 								Convolutional Neural Network</h3></a>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+								<p>This workflow demonstrates design and training of a CNN model to classify for a variety of synthetic labeled images..</p>
 							</article>
 						</div>
 						<ul class="actions">
