--- a/index.html
+++ b/index.html
@@ -8,14 +8,20 @@
 	</head>
 
 	<body class="is-preload">
-
+		
 		<!-- Header -->
-			<header id="header">
-				<ul height="42px" text-align="center">
-					<li style="padding-right: 30px"><a href="#one">About Me</a></li>
-					<li style="padding-right: 30px"><a href="#two">Recent Work</a></li>
-					<li><a href="#three">Contact</a></li>
-				</ul>
+			<header id="header" background-position="center">
+				<div class="fixed-header">
+					<div class="container">
+						<nav>
+							<a href="#">Home</a>
+							<a href="#">About Me</a>
+							<a href="#two">Recent Work</a>
+							<a href="#three">Contact</a>
+						</nav>
+					</div>
+				</div>
+
 				<div class="inner">
 					<a href="#" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
 					<h1>My name is<strong> John Eric</strong> and I'm a<br />
