--- a/index.html
+++ b/index.html
@@ -52,6 +52,12 @@
 						<h2>Recent Work</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
+								<a href="images/fulls/gha.jpg" class="image fit thumb"><img src="images/thumbs/gha.jpg" alt=""/></a>
+								<h3><a href="https://github.com/JohnEricMcCarthy2/github-actions-test" target="_blank">
+								GitHub Actions .yml Examples</h3></a>
+								<p>Practice using GitHub's CI/CD platform to automate builds, tests, and deployment pipelines.</p>
+							</article>
+							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/01.jpg" class="image fit thumb"><img src="images/thumbs/01.jpg" alt=""/></a>
 								<h3><a href="https://github.com/JohnEricMcCarthy2/Machine-Learning/blob/main/Interactive_NeuralNetwork_SingleLayer.ipynb" target="_blank">
 								Interactive Single Layer Artificial Neural Network</h3></a>
@@ -61,7 +67,7 @@
 								<a href="images/fulls/02.jpg" class="image fit thumb"><img src="images/thumbs/02.jpg" alt=""/></a>
 								<h3><a href="https://github.com/JohnEricMcCarthy2/Machine-Learning/blob/main/SubsurfaceDataAnalytics_ConvolutionalNeuralNetworks_Percolation_Threshold.ipynb" target="_blank">
 								Convolutional Neural Network</h3></a>
-								<p>This workflow demonstrates design and training of a CNN model to classify for a variety of synthetic labeled images..</p>
+								<p>This workflow demonstrates design and training of a CNN model to classify for a variety of synthetic labeled images.</p>
 							</article>
 						</div>
 						<ul class="actions">
