fa external link icons

--- a/index.html
+++ b/index.html
@@ -54,19 +54,20 @@
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/gha.jpg" class="image fit thumb"><img src="images/thumbs/gha.jpg" alt=""/></a>
 								<h3><a href="https://github.com/JohnEricMcCarthy2/github-actions-test" target="_blank">
-								GitHub Actions .yml Examples</h3></a>
+								GitHub Actions .yml Examples <i class="fa fa-external-link-alt fa-xs"></i></h3></a>
+								
 								<p>Practice using GitHub's CI/CD platform to automate builds, tests, and deployment pipelines.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/01.jpg" class="image fit thumb"><img src="images/thumbs/01.jpg" alt=""/></a>
 								<h3><a href="https://github.com/JohnEricMcCarthy2/Machine-Learning/blob/main/Interactive_NeuralNetwork_SingleLayer.ipynb" target="_blank">
-								Interactive Single Layer Artificial Neural Network</h3></a>
+								Interactive Single Layer Artificial Neural Network <i class="fa fa-external-link-alt fa-xs"></i></h3></a>
 								<p>Simple workflow, demonstration of artificial neural networks for subsurface modeling workflows. This should help you get started with building subsurface models that use data analytics and machine learning.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/02.jpg" class="image fit thumb"><img src="images/thumbs/02.jpg" alt=""/></a>
 								<h3><a href="https://github.com/JohnEricMcCarthy2/Machine-Learning/blob/main/SubsurfaceDataAnalytics_ConvolutionalNeuralNetworks_Percolation_Threshold.ipynb" target="_blank">
-								Convolutional Neural Network</h3></a>
+								Convolutional Neural Network <i class="fa fa-external-link-alt fa-xs"></i></h3></a>
 								<p>This workflow demonstrates design and training of a CNN model to classify for a variety of synthetic labeled images.</p>
 							</article>
 						</div>
