node recent work

--- a/index.html
+++ b/index.html
@@ -54,9 +54,14 @@
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/gha.jpg" class="image fit thumb"><img src="images/thumbs/gha.jpg" alt=""/></a>
 								<h3><a href="https://github.com/JohnEricMcCarthy2/github-actions-test" target="_blank">
-								GitHub Actions .yml Examples <i class="fa fa-external-link-alt fa-xs"></i></h3></a>
-								
+								GitHub Actions .yml Examples <i class="fa fa-external-link-alt fa-xs"></i></h3></a>	
 								<p>Practice using GitHub's CI/CD platform to automate builds, tests, and deployment pipelines.</p>
+							</article>
+							<article class="col-6 col-12-xsmall work-item">
+								<a href="images/fulls/nodefarmfull.jpg" class="image fit thumb"><img src="images/thumbs/nodefarmthumb.jpg" alt=""/></a>
+								<h3><a href="https://github.com/JohnEricMcCarthy2/node-farm" target="_blank">
+								Node Farm API Project <i class="fa fa-external-link-alt fa-xs"></i></h3></a>
+								<p>This project is a simple api using node.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/01.jpg" class="image fit thumb"><img src="images/thumbs/01.jpg" alt=""/></a>
