--- a/index.html
+++ b/index.html
@@ -41,10 +41,8 @@
 						</header>
 						<p>It all started with a box of Legos! As a child, my favorite past time would be putting together a new set of Legos. Every time I finished, my parents would say, "My son is going to be an engineer!" I followed that dream and made it a reality. I love engineering because it combines scientific and mathematical knowledge with creative thinking. To be an engineer you must question the established way of thinking and come up with new ideas.
 
-							As an undergraduate studying petroleum engineering at The University of Texas at Austin I fell in love with the energy industry and I often wondered how it could be improved. How can I take the existing science and math and create a unique solution to the world's energy needs? I found the answer to this question through programming. In college, I explored the world of coding while learning about various disciplines in the oil industry. Combining my two passions allowed me to exhibit the sheer joy of making things, breaking them, and coming up with innovative solutions to improve them. For me, the learning never stops. I'm looking forward to the future and I welcome you to join me on my journey as a highly motivated and detail-oriented engineer.</p>
-						<ul class="actions">
-							<li><a href="resume/file.pdf" download="John Eric McCarthy Resume" class="button">Download My Resume!</a></li>
-						</ul>
+							As an undergraduate studying petroleum engineering at The University of Texas at Austin I fell in love with the energy industry and I often wondered how it could be improved. How can I take the existing science and math and create a unique solution to the world's energy needs? I found the answer to this question through programming. In college, I explored the world of coding while learning about various disciplines in the oil industry. Combining my two passions allowed me to exhibit the sheer joy of making things, breaking them, and coming up with innovative solutions to improve them. For me, the learning never stops. I'm looking forward to the future and I welcome you to join me on my journey as a highly motivated and detail-oriented engineer.
+						</p>
 					</section>
 
 				<!-- Two -->
